tests/ui/discord-frontend/entity_macro/expected_exclude_or_include.stderr
error: expected `exclude` or `include`
  --> tests/ui/discord-frontend/entity_macro/expected_exclude_or_include.rs:36:5
   |
LL |     expected_exclude = [],
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

